--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer": "^6.4.12",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^127.0.0",
