go the extra mile

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # APPLICATION_DB= mongodb+srv://ogunbiyiamidat65:ogunbiyiamidat65@cluster0.tidrfny.mongodb.net/todo?retryWrites=true&w=majority
 
 
-APPLICATION_PORT= 2000
+PORT= 1111
 
-POLLUTION_DB = "mongodb://0.0.0.0:27017/petbottleproject"
+# POLLUTION_DB = "mongodb://0.0.0.0:27017/petbottleproject"
+POLLUTION_DB = mongodb+srv://godswill:godswill@cluster0.3pjgof1.mongodb.net/HackBE?retryWrites=true&w=majority
