--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn index.ts"
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "dev": "ts-node-dev --respawn index.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,11 @@
     "googleapis": "^127.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3"
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.6"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4"
   }
 }
