--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 
 PORT= 1111
 
-# POLLUTION_DB = "mongodb://0.0.0.0:27017/petbottleproject"
-POLLUTION_DB = mongodb+srv://godswill:godswill@cluster0.3pjgof1.mongodb.net/HackBE?retryWrites=true&w=majority
+POLLUTION_DB = "mongodb://0.0.0.0:27017/petbottleproject"
+# POLLUTION_DB = "mongodb+srv://godswill:godswill@cluster0.3pjgof1.mongodb.net/HackBE?retryWrites=true&w=majority"
